--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="header-1">
+        <h1>Input Guess Here.</h1>
+        <h1>Guess a Number between 1 and 100.</h1>
+    </div>
+
+    <div id="buttons">
+        <button class="button1" id="easyBtn">Easy</button>
+        <button class="button1" id="mediumBtn">Medium</button>
+        <button class="button1" id="hardBtn">Hard</button>
+        <button class="button1" id="ultraBtn">Ultra</button>
+    </div>
+
+    <div id="input-box">
+        <input type="number" id="guessBox" name="numberGuess">
+        <button class="btn" id="btn1">Guess</button>
+        <button class="btn" id="btn2">Reset Guess</button>
+        <button class="btn" id="btn3">Reset Field</button>
+        <div class="btn" id="guess">Guesses Left: <span id="counter"></span></div>
+    </div>
+    <div class="randNum">Random Number is: <span id="randomNum"></span></div>
+    <div class="randNum">Message: <span id="message"></span></div>
+    <div id="border"><span id="borders"></span></div>
+    <div id="result">It took you <span id="guesses"></span> guesses.</div>
+
     <script src = "script.js"></script> 
 </body>
 </html>
